# freepalp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.zh.md  THREAT_MODEL.md  benchmark.py  eval_harness.py  first_run.py  pyproject.toml  requirements.txt  server_err.txt  server_log.txt  start.bat  start.ps1  start.sh  test_failure_mode.py  test_mvp.py  test_security.py  train_diverse.py  train_more_types.py  train_weak_types.py  tunnel-start.bat  tunnel-stop.bat  tunnel_err.txt  ИНСТРУКЦИЯ.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
eval/: SELF_IMPROVEMENT_RESULTS.md  hard_tasks.json
freepalp/: BASELINE.md  FREEPALP_RULES.md  __init__.py  app.py  gateway.py
freepalp/agents/: __init__.py  architect_agent.py  critic_agent.py  tool_agent.py  worker_agent.py
freepalp/config/: mcp_servers.json  models.json  models_dev_cache.json  prompts.json  settings.json
freepalp/core/: __init__.py  cron_manager.py  history_search.py  hooks.py  mcp_builder.py  mcp_client.py  mcp_discovery.py  model_discovery.py  models.py  models_dev_catalog.py  ollama_autostart.py  orchestrator.py  prompt_loader.py  router.py  sanitize.py  session_checkpoint.py  session_keys.py  session_logger.py  skill_library.py  task_parser.py  token_budget.py  user_profile.py  winproc.py
freepalp/memory/: consolidation.py  memory_manager.py  session_memory.py  vector_store.py
tools/: office_blender.py
всякое/: Разбор MiMo Code — референс памяти для FreePalp.md  Разбор Odysseus (PewDiePie) — сравнение с FreePalp.md
(+87 files in other folders)
