[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freepalp"
version = "1.1.0"
description = "Мультиагентный AI-оркестратор на бесплатных моделях с самоулучшением, памятью и WebUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dmitry Verdysh" }]
keywords = ["ai", "agent", "orchestrator", "llm", "multi-agent", "ollama", "groq", "self-improving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "groq>=0.9.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/dmitrychaiko/freepalp"
Repository = "https://github.com/dmitrychaiko/freepalp"

[project.scripts]
freepalp = "freepalp.app:cli"

[tool.setuptools.packages.find]
include = ["freepalp*"]

[tool.setuptools.package-data]
freepalp = ["web/static/*", "config/*.json", "config/**/*.json"]
